Fix overflowed text in homepage big hero.

--- a/public/assets/less/main.less
+++ b/public/assets/less/main.less
@@ -66,7 +66,7 @@ a {
 // --------------------------------- Layout --------------------------------- //
 // -------------------------------------------------------------------------- //
 
-// # ------------------------------- header 
+// # ------------------------------- header
 .header {
     border-bottom: 5px solid @grey;
     text-align: center;
@@ -106,7 +106,7 @@ a {
             }
         }
     }
-    
+
     .logo {
         width: 450px;
     }
@@ -151,7 +151,7 @@ a {
     }
 
     &.homepage {
-        height: 100vh;
+        min-height: 100vh;
     }
 }
 
@@ -180,7 +180,7 @@ a {
             width: 100px;
         }
     }
-    
+
     .services {
         text-align: center;
         a {
